<resources>
    <string name="app_name">Personal Finance</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="today">วันนี้</string>
    <string name="yesterday">เมื่อวาน</string>
    <string name="this_month">เดือนนี้</string>

    <string name="income">รายรับ</string>
    <string name="expense">รายจ่าย</string>
    <string name="investment">ลงทุน</string>
    <string name="alarm">การแจ้งเตือน</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
